@@ -55,7 +55,7 @@ class USSDCallBack(
         response: CharSequence
     ) {
         super.onReceiveUssdResponse(telephonyManager, request, response)
-        val message = Template.render(context,R.string.TPL_send_USSD, mapOf("Request" to request, "Response" to response.toString()))
+        val message = Template.render(context,"TPL_send_USSD", mapOf("Request" to request, "Response" to response.toString()))
         networkProgressHandle(message)
     }
 
@@ -65,7 +65,7 @@ class USSDCallBack(
         failureCode: Int
     ) {
         super.onReceiveUssdResponseFailed(telephonyManager, request, failureCode)
-        val message = Template.render(context,R.string.TPL_send_USSD, mapOf("Request" to request, "Response" to getErrorCodeString(failureCode)))
+        val message = Template.render(context,"TPL_send_USSD", mapOf("Request" to request, "Response" to getErrorCodeString(failureCode)))
         networkProgressHandle(message)
     }
 
