@@ -5,12 +5,20 @@ import io.paperdb.Paper
 
 object Template {
     @JvmStatic
-    fun render(context: Context, template: Int, values: Map<String, String>): String {
+    fun render(context: Context, template: String, values: Map<String, String>): String {
         Paper.init(context)
-        var result = Paper.book("Template").read(template.toString(), context.getString(template)).toString()
+        var result = Paper.book("Template").read(template, getStringByName(context,template)).toString()
         for ((key, value) in values) {
             result = result.replace("{{${key}}}", value)
         }
         return result
+    }
+    private fun getStringByName(context: Context, name: String): String {
+        val resId = context.resources.getIdentifier(name, "string", context.packageName)
+        return if (resId != 0) {
+            context.getString(resId)
+        } else {
+            "String resource not found"
+        }
     }
 }
