@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="Lang">en_gb</string>
     <string name="time_format">dd/MMM/yyyy HH:mm:ss z</string>
     <string name="system_message_head">[System Information]</string>
@@ -38,7 +38,7 @@
     <string name="send_failed">Failed</string>
     <string name="airplane_mode">Device is in Airplane mode</string>
     <string name="no_network">No service</string>
-    <string name="sendsms_dual">/sendsms1 - Send SMS using SIM slot 1\n/sendsms2 - Send SMS using SIM slot 2</string>
+    <string name="sendsms_dual" tools:ignore="Typos">/sendsms1 - Send SMS using SIM slot 1\n/sendsms2 - Send SMS using SIM slot 2</string>
     <string name="display_sim_card_alias_in_dual_card_mode">Display SIM card alias</string>
     <string name="failed_to_get_information">Fail to get information.</string>
     <string name="sendsms">/sendsms - Send SMS</string>
@@ -95,7 +95,7 @@
     <string name="ok_button">OK</string>
     <string name="about_title">About</string>
     <string name="about_content">"Developer: qwe7002\nEnglish translation: @tangbao @jixunmoe\nCurrent version: "</string>
-    <string name="send_ussd_dual_command">"/sendussd1 - Send USSD request using SIM slot 1\n/sendussd2 - Send USSD request using SIM slot 2"</string>
+    <string name="send_ussd_dual_command" tools:ignore="Typos">"/sendussd1 - Send USSD request using SIM slot 1\n/sendussd2 - Send USSD request using SIM slot 2"</string>
     <string name="qrcode_notice">Keep this QR code safe!\nPlease don\'t share it with others.</string>
     <string name="cancel_button">Cancel</string>
     <string name="delete_button">Delete</string>
